# ContactManagement

./: .env.dist  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: cm-ci.yml
api/: serializers.py  urls.py  views.py
api/tests/: test_contact_api.py  test_contact_status_api.py  test_serializers.py  test_urls.py  test_views.py
contact_management/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
contacts/: admin.py  forms.py  models.py  urls.py  views.py
contacts/fixtures/: contact_status_choices.json  contacts.json
contacts/migrations/: 0001_initial.py  0002_contact.py  0003_alter_contact_phone_number.py  0004_alter_contact_status.py  0005_alter_contact_status.py
contacts/static/contacts/js/: contact_form_validation.js  get_weather.js
contacts/templates/contacts/: contact_confirm_delete.html  contact_detail.html  contact_form.html  contact_list.html
contacts/templates/statuses/: contact_status_choices_confirm_delete.html  contact_status_choices_detail.html  contact_status_choices_form.html  contact_status_choices_list.html
contacts/tests/: __init__.py  test_forms.py  test_models.py  test_urls.py  test_views.py
contacts/tests/js/: README.md  contact_form_validation.test.js  get_weather.test.js  package-lock.json  package.json
templates/: 404.html  500.html  index.html
templates/registration/: login.html  logout.html  register.html
testing/: __init__.py  factories.py
theme/templates/: base.html
