[project]
name = "contactmanagement"
version = "0.1.0"
description = "Contact Management App"
requires-python = ">=3.13"
dependencies = [
    "arrow==1.3.0",
    "asgiref==3.8.1",
    "black==25.1.0",
    "certifi==2025.1.31",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "django==5.2",
    "django-browser-reload==1.18.0",
    "django-environ==0.12.0",
    "django-filter==25.1",
    "django-tailwind==4.0.1",
    "djangorestframework==3.16.0",
    "drf-yasg==1.21.10",
    "factory-boy==3.3.3",
    "faker==37.1.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==14.0.0",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
]

[project.optional-dependencies]
dev = [
    "bandit==1.8.3",
    "binaryornot==0.4.4",
    "cachecontrol==0.14.2",
    "cfgv==3.4.0",
    "colorama==0.4.6",
    "cookiecutter==2.6.0",
    "cyclonedx-python-lib==9.1.0",
    "defusedxml==0.7.1",
    "distlib==0.3.9",
    "filelock==3.18.0",
    "identify==2.6.9",
    "inflection==0.5.1",
    "isort==6.0.1",
    "license-expression==30.4.1",
    "markupsafe==3.0.2",
    "msgpack==1.1.0",
    "mypy-extensions==1.0.0",
    "nodeenv==1.9.1",
    "packageurl-python==0.16.0",
    "packaging==24.2",
    "pathspec==0.12.1",
    "pbr==6.1.1",
    "pip-api==0.0.34",
    "pip-audit==2.9.0",
    "pip-requirements-parser==32.0.1",
    "platformdirs==4.3.7",
    "pre-commit==4.2.0",
    "py-serializable==2.0.0",
    "pyparsing==3.2.3",
    "ruff==0.11.6",
    "setuptools==78.1.0",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "stevedore==5.4.1",
    "text-unidecode==1.3",
    "toml==0.10.2",
    "types-python-dateutil==2.9.0.20241206",
    "virtualenv==20.30.0",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "D203",  # One blank line before a class docstring
    "D212",  # Multi-line docstring should start on the first line
    "D104",  # Missing docstring in a public package
    "D100",  # Missing docstring in a public module
    "D101",  # Missing docstring in a public class
    "D104",  # Missing docstring in a public package
    "ERA001",  # Commented-out code
    "ANN201",  # Missing return type annotation for a public function
    "TRY003",  # Avoid long messages in raise
    "EM101",  # Exception string literal
]
exclude = [
    "**/migrations/*.py",
    "**/migrations",
    "**/settings/*.py",
    "**/tests/**",
    "**/tests"
]

[build-system]
requires = ["uv"]
build-backend = "uv.build"
